plugins {
    id "io.spring.dependency-management" version "1.0.8.RELEASE"
}

subprojects {

    group = 'chart.desk'
    version = '0.0.1'

    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java-library'

    sourceCompatibility = '17'
    targetCompatibility = '17'

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom("org.springframework.boot:spring-boot-dependencies:2.5.0")
        }
    }

    task wrapper(type: Wrapper){
        gradleVersion = '7.2'
    }

}
